<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuOpciones">

    <ImageView
        android:layout_width="230dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/title"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/our_menu"
        android:textSize="20sp"
        android:layout_marginTop="5dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="40dp">

        <Button
            android:id="@+id/cold_drinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cold_drinks"
            android:textColor="@color/white"
            android:background="@color/button_color"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/hot_drinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hot_drinks"
            android:textColor="@color/white"
            android:background="@color/button_color"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/sweets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sweets"
            android:textColor="@color/white"
            android:background="@color/button_color"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/salties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salties"
            android:textColor="@color/white"
            android:background="@color/button_color" />


    </GridLayout>

</LinearLayout>