<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fondo_mainActivity"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scaleType="centerCrop"
        android:src="@drawable/thecheezery"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="40dp"
            android:paddingHorizontal="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="normal"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:padding="15dp"
            />

        <Button
            android:id="@+id/boton"
            android:layout_marginTop="25dp"
            android:layout_width="237dp"
            android:layout_height="39dp"
            android:text="@string/activity_main_button"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:background="@drawable/round_button"/>
    </LinearLayout>

</LinearLayout>